<?xml version="1.0"?>
<package format="2">
  <name>leddar_can</name>
  <version>0.0.0</version>
  <description>The leddar_can package</description>

  <maintainer email="karl@todo.todo">karl</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>

  <buildtool_depend>ament_cmake_auto</buildtool_depend>
  <depend>rclcpp</depend>
  <depend>builtin_interfaces</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>can_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
